panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__typedef__test_error_redeclaration_of_typedef_with_function_pointer_uses_value_in_message.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/typedef/test_error_redeclaration_of_typedef_with_function_pointer_uses_value_in_message.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: value name `a` redeclared as `typedef` name
   ╭─[panko/tests/cases/typedef/test_error_redeclaration_of_typedef_with_function_pointer_uses_value_in_message.c:5:1]
   │
 4 │ int (*a)();
   │       ┬  
   │       ╰── originally declared here as a value name
 5 │ typedef int a;
   │ ─────┬─────  
   │      ╰─────── redeclared here as a `typedef` name
───╯

Error: `typedef` name `b` redeclared as value name
   ╭─[panko/tests/cases/typedef/test_error_redeclaration_of_typedef_with_function_pointer_uses_value_in_message.c:8:7]
   │
 7 │ typedef int b;
   │ ─────┬─────  
   │      ╰─────── originally declared here as a `typedef` name
 8 │ int (*b)();
   │       ┬  
   │       ╰── redeclared here as a value name
───╯

Error: value name `c` redeclared as `typedef` name
    ╭─[panko/tests/cases/typedef/test_error_redeclaration_of_typedef_with_function_pointer_uses_value_in_message.c:12:5]
    │
 11 │     int (*c)();
    │           ┬  
    │           ╰── originally declared here as a value name
 12 │     typedef int c;
    │     ─────┬─────  
    │          ╰─────── redeclared here as a `typedef` name
────╯

Error: `typedef` name `d` redeclared as value name
    ╭─[panko/tests/cases/typedef/test_error_redeclaration_of_typedef_with_function_pointer_uses_value_in_message.c:15:11]
    │
 14 │     typedef int d;
    │     ─────┬─────  
    │          ╰─────── originally declared here as a `typedef` name
 15 │     int (*d)();
    │           ┬  
    │           ╰── redeclared here as a value name
────╯
