panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__typedef__test_error_shadow_typedef_in_inner_scope_parenthesised_looks_like_function_taking_pointer.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/typedef/test_error_shadow_typedef_in_inner_scope_parenthesised_looks_like_function_taking_pointer.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: declaration does not specify a name
   ╭─[panko/tests/cases/typedef/test_error_shadow_typedef_in_inner_scope_parenthesised_looks_like_function_taking_pointer.c:4:9]
   │
 4 │         int (name*);
   │         ─────┬─────  
   │              ╰─────── this looks like a declaration with type `fn(∅: ptr<typedef<name>>) -> int`
───╯
